k8s/applications/public/glance/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: glance
  template:
    metadata:
      namespace: glance
      labels:
        app.kubernetes.io/name: glance
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: glance
          # Dockerfile: https://github.com/glanceapp/glance/blob/main/Dockerfile
          image: docker.io/glanceapp/glance:latest
          command: [/app/glance]
          args: ['--config', '/glance.yaml']
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {memory: 64Mi}
            limits: {memory: 64Mi}
          ports:
            - {name: http, containerPort: 8080}
          volumeMounts:
            - {name: glance-config-volume, mountPath: /glance.yaml, subPath: 'glance.yaml', readOnly: true}
      volumes:
        - {name: glance-config-volume, configMap: {name: glance-config}}
