k8s/applications/public/glance/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: glance
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
