k8s/applications/public/glance/SecurityPolicy.yaml
# Cross namespace attachment?
# - https://github.com/envoyproxy/gateway/issues/5143
# OIDC:
# - https://gateway.envoyproxy.io/docs/tasks/security/oidc/
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: allow-sso
  namespace: glance
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: web}
  authorization:
    defaultAction: Deny
  oidc:
    clientIDRef: {namespace: glance, kind: Secret, name: oidc}
    clientSecret: {namespace: glance, kind: Secret, name: oidc}
    cookieConfig: {sameSite: Lax}
    cookieDomain: karlsen.app
    # cookieNames: {accessToken: access-token, idToken: id-token}
    # forwardAccessToken: false
    # logoutPath: /logout
    # passThroughAuthHeader: false
    provider:
      authorizationEndpoint: https://karlsen-xzy0yv.zitadel.cloud/oauth/v2/authorize
      tokenEndpoint: https://karlsen-xzy0yv.zitadel.cloud/oauth/v2/token
      issuer: https://karlsen-xzy0yv.zitadel.cloud
    redirectURL: https://karlsen.app/oidc-callback
    # refreshToken: true
    # resources: []
    scopes: [openid, profile, email]
